--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 body{
+    background: #1e1f24;
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
-
 }
 
 #cabecera
@@ -15,7 +15,13 @@ body{
     margin: 0;
     padding: 0.5em;
     font-weight: bold;
-    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -35,4 +41,10 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
